@@ -23,21 +23,20 @@ import static com.google.common.collect.ImmutableSortedSet.toImmutableSortedSet;
 import static com.google.common.collect.Streams.stream;
 import static java.util.Comparator.naturalOrder;
 
-import com.google.common.annotations.GwtIncompatible;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Function;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMultiset;
 import com.google.common.collect.ImmutableSet;
+import com.google.errorprone.annotations.CanIgnoreReturnValue;
 import com.google.javascript.jscomp.CheckLevel;
 import com.google.javascript.jscomp.DiagnosticType;
 import com.google.javascript.jscomp.ErrorHandler;
 import com.google.javascript.jscomp.JSError;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Comparator;
 import java.util.Map;
-import javax.annotation.Nullable;
+import org.jspecify.annotations.Nullable;
 
 /**
  * Provides compile-time locate semantics for ES6 and CommonJS modules.
@@ -94,6 +93,7 @@ public final class ModuleLoader {
 
     private Builder() {}
 
+    @CanIgnoreReturnValue
     public Builder setErrorHandler(ErrorHandler x) {
       if (x != null) {
         this.errorHandler = x;
@@ -102,6 +102,7 @@ public final class ModuleLoader {
     }
 
     /** Path prefixes to strip from module paths */
+    @CanIgnoreReturnValue
     public Builder setModuleRoots(Iterable<String> x) {
       this.moduleRoots = x;
       return this;
@@ -112,24 +113,28 @@ public final class ModuleLoader {
      *
      * <p>Used to ensure that resolved paths references a valid input.
      */
+    @CanIgnoreReturnValue
     public Builder setInputs(Iterable<? extends DependencyInfo> x) {
       this.inputs = x;
       return this;
     }
 
     /** Creates a module resolver, which determines how module identifiers are resolved */
+    @CanIgnoreReturnValue
     public Builder setFactory(ModuleResolverFactory x) {
       this.factory = x;
       return this;
     }
 
     /** Determines how to sanitize paths before resolving */
+    @CanIgnoreReturnValue
     public Builder setPathResolver(PathResolver x) {
       this.pathResolver = x;
       return this;
     }
 
     /** Determines if / how paths should be escaped */
+    @CanIgnoreReturnValue
     public Builder setPathEscaper(PathEscaper x) {
       this.pathEscaper = x;
       return this;
@@ -196,8 +201,7 @@ public final class ModuleLoader {
      *
      * @return The normalized module URI, or {@code null} if not found.
      */
-    @Nullable
-    public ModulePath resolveJsModule(
+    public @Nullable ModulePath resolveJsModule(
         String moduleAddress, String sourcename, int lineno, int colno) {
       String loadAddress =
           moduleResolver.resolveJsModule(this.path, moduleAddress, sourcename, lineno, colno);
@@ -301,8 +305,8 @@ public final class ModuleLoader {
   }
 
   public static String relativePathFrom(String fromUriPath, String toUriPath) {
-    Path fromPath = Paths.get(fromUriPath);
-    Path toPath = Paths.get(toUriPath);
+    Path fromPath = Path.of(fromUriPath);
+    Path toPath = Path.of(toUriPath);
     Path fromFolder = fromPath.getParent();
 
     // if the from URIs are simple names without paths, they are in the same folder
@@ -374,11 +378,10 @@ public final class ModuleLoader {
       }
     },
 
-    @GwtIncompatible("Paths.get, Path.toAbsolutePath")
     ABSOLUTE {
       @Override
       public String apply(String path) {
-        return Paths.get(path).toAbsolutePath().toString();
+        return Path.of(path).toAbsolutePath().toString();
       }
     };
   }
