@@ -21,20 +21,25 @@ import static com.google.common.truth.Truth.assertThat;
 import static com.google.common.truth.Truth.assertWithMessage;
 import static com.google.javascript.jscomp.CompilerTestCase.lines;
 import static com.google.javascript.jscomp.testing.JSErrorSubject.assertError;
-import static com.google.javascript.rhino.testing.Asserts.assertThrows;
 import static com.google.javascript.rhino.testing.NodeSubject.assertNode;
 import static java.nio.charset.StandardCharsets.US_ASCII;
 import static java.nio.charset.StandardCharsets.UTF_8;
+import static org.junit.Assert.assertThrows;
 
 import com.google.common.base.Joiner;
 import com.google.common.base.Supplier;
 import com.google.common.base.Suppliers;
 import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
 import com.google.common.io.Files;
+import com.google.gson.Gson;
+import com.google.gson.JsonArray;
+import com.google.gson.JsonObject;
 import com.google.javascript.jscomp.AbstractCommandLineRunner.FlagEntry;
 import com.google.javascript.jscomp.AbstractCommandLineRunner.JsSourceType;
+import com.google.javascript.jscomp.Compiler.ScriptNodeLicensesOnlyTracker;
 import com.google.javascript.jscomp.CompilerOptions.LanguageMode;
 import com.google.javascript.jscomp.SourceMap.LocationMapping;
 import com.google.javascript.jscomp.testing.JSChunkGraphBuilder;
@@ -47,7 +52,6 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.PrintStream;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.HashMap;
@@ -57,6 +61,7 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
+import org.jspecify.annotations.Nullable;
 import org.junit.Before;
 import org.junit.Ignore;
 import org.junit.Rule;
@@ -68,18 +73,19 @@ import org.junit.runners.JUnit4;
 /** Tests for {@link CommandLineRunner}. */
 @RunWith(JUnit4.class)
 public final class CommandLineRunnerTest {
+  @Rule public final TemporaryFolder temporaryFolder = new TemporaryFolder();
   private static final Joiner LINE_JOINER = Joiner.on('\n');
 
-  private Compiler lastCompiler = null;
-  private CommandLineRunner lastCommandLineRunner = null;
-  private List<Integer> exitCodes = null;
-  private ByteArrayOutputStream outReader = null;
-  private ByteArrayOutputStream errReader = null;
+  private @Nullable Compiler lastCompiler = null;
+  private @Nullable CommandLineRunner lastCommandLineRunner = null;
+  private @Nullable List<Integer> exitCodes = null;
+  private @Nullable ByteArrayOutputStream outReader = null;
+  private @Nullable ByteArrayOutputStream errReader = null;
   private Map<Integer, String> filenames;
 
   // If set, this will be appended to the end of the args list.
   // For testing args parsing.
-  private String lastArg = null;
+  private @Nullable String lastArg = null;
 
   // If set to true, uses comparison by string instead of by AST.
   private boolean useStringComparison = false;
@@ -136,7 +142,7 @@ public final class CommandLineRunnerTest {
                       "/** @param {...*} x */ function alert(x) {}",
                       "function Symbol() {}")));
 
-  private List<SourceFile> externs;
+  private ImmutableList<SourceFile> externs;
 
   @Before
   public void setUp() throws Exception {
@@ -153,12 +159,38 @@ public final class CommandLineRunnerTest {
   }
 
   @Test
+  public void testStage1ErrorExitStatus() throws Exception {
+    // Create an input file
+    File srcFile = temporaryFolder.newFile("input.js");
+    writeLinesToFile(
+        srcFile,
+        // Intentionally incorrect type to generate a compiler error
+        "/** @type {undefined} */",
+        "const x = 1;");
+
+    // Create a path for the stage 1 output
+    File stage1Save = temporaryFolder.newFile("stage1.save");
+
+    ImmutableList<String> commonFlags =
+        ImmutableList.of("--jscomp_error=checkTypes", "--js", srcFile.toString());
+
+    // Run the compiler to generate the stage 1 save file
+    final ImmutableList<String> stage1Flags =
+        createStringList(
+            commonFlags, new String[] {"--save_stage1_to_file", stage1Save.toString()});
+    CommandLineRunner runner =
+        new CommandLineRunner(
+            stringListToArray(stage1Flags), new PrintStream(outReader), new PrintStream(errReader));
+    // Expect an exit status of 1 because there is one error.
+    assertThat(runner.doRun()).isEqualTo(1);
+    assertThat(new String(outReader.toByteArray(), UTF_8)).isEmpty();
+  }
+
+  @Test
   public void test3StageCompile() throws Exception {
-    // Create a temporary directory to hold inputs and outputs
-    final File testDir = java.nio.file.Files.createTempDirectory("testDir").toFile();
 
     // Create a message bundle to use
-    File msgBundle = new File(testDir, "messages.xtb");
+    File msgBundle = temporaryFolder.newFile("messages.xtb");
     final ImmutableList<String> lines =
         ImmutableList.of(
             "<?xml version=\"1.0\" encoding=\"UTF-8\"?>",
@@ -170,7 +202,7 @@ public final class CommandLineRunnerTest {
     writeLinesToFile(msgBundle, lines);
 
     // Create test externs with a definition for goog.getMsg().
-    final File externsFile = new File(testDir, "externs.js");
+    final File externsFile = temporaryFolder.newFile("externs.js");
     writeLinesToFile(
         externsFile,
         "/**",
@@ -188,7 +220,7 @@ public final class CommandLineRunnerTest {
         "goog.getMsg = function(msg, placeholderReplacements, options) {};");
 
     // Create an input file
-    File srcFile = new File(testDir, "input.js");
+    File srcFile = temporaryFolder.newFile("input.js");
     writeLinesToFile(
         srcFile,
         "/** @desc greeting */",
@@ -196,74 +228,129 @@ public final class CommandLineRunnerTest {
         "console.log(MSG_HELLO);");
 
     // Create a path for the stage 1 output
-    File stage1Save = new File(testDir, "stage1.save");
+    File stage1Save = temporaryFolder.newFile("stage1.save");
 
     ImmutableList<String> commonFlags =
         ImmutableList.of(
             "--compilation_level=ADVANCED_OPTIMIZATIONS",
+            "--source_map_include_content",
             "--translations_file",
             msgBundle.toString(),
-            "--js",
+            "--externs",
             externsFile.toString(),
             "--js",
             srcFile.toString());
 
     // Run the compiler to generate the stage 1 save file
+    final ImmutableList<String> stage1Flags =
+        createStringList(
+            commonFlags, new String[] {"--save_stage1_to_file", stage1Save.toString()});
+    verifyFlagsAreIncompatibleWithChecksOnly(stage1Flags);
     CommandLineRunner runner =
         new CommandLineRunner(
-            createStringArray(commonFlags, "--save_stage1_to_file", stage1Save.toString()));
+            stringListToArray(stage1Flags), new PrintStream(outReader), new PrintStream(errReader));
     assertThat(runner.doRun()).isEqualTo(0);
+    assertThat(new String(outReader.toByteArray(), UTF_8)).isEmpty();
 
     assertThat(runner.getCompiler().toSource())
-        .isEqualTo(
-            "var __JSC_LOCALE_DATA__=[];"
-                + "const MSG_HELLO=goog.getMsg(\"hello\");console.log(MSG_HELLO);");
+        .isEqualTo("const MSG_HELLO=goog.getMsg(\"hello\");console.log(MSG_HELLO);");
 
     // Create a path for the stage 2 output
-    File stage2Save = new File(testDir, "stage2.save");
+    File stage2Save = temporaryFolder.newFile("stage2.save");
     // run the compiler to generate the stage 2 save file
-    runner =
-        new CommandLineRunner(
-            createStringArray(
-                commonFlags,
-                "--restore_stage1_from_file",
-                stage1Save.toString(),
-                "--save_stage2_to_file",
-                stage2Save.toString()));
+    final ImmutableList<String> stage2Flags =
+        createStringList(
+            commonFlags,
+            new String[] {
+              "--restore_stage1_from_file",
+              stage1Save.toString(),
+              "--save_stage2_to_file",
+              stage2Save.toString()
+            });
+    verifyFlagsAreIncompatibleWithChecksOnly(stage2Flags);
+    runner = new CommandLineRunner(stringListToArray(stage2Flags));
     assertThat(runner.doRun()).isEqualTo(0);
 
     // During stage 2 the message is wrapped in a function call to protect it from mangling by
     // optimizations.
     assertThat(runner.getCompiler().toSource())
         .isEqualTo(
-            "var __JSC_LOCALE_DATA__=[];console.log(__jscomp_define_msg__({key:\"MSG_HELLO\",msg_text:\"hello\"}));");
+            concatStrings(
+                "console.log(",
+                "__jscomp_define_msg__({\"key\":\"MSG_HELLO\",\"msg_text\":\"hello\"})",
+                ");"));
 
     // Create a path for the final output
-    File compiledFile = new File(testDir, "compiled.js");
+    File compiledFile = temporaryFolder.newFile("compiled.js");
+    // Create a path for the output source map
+    File sourceMapFile = temporaryFolder.newFile("compiled.sourcemap");
 
     // run the compiler to generate the final output
-    runner =
-        new CommandLineRunner(
-            createStringArray(
-                commonFlags,
-                "--restore_stage2_from_file",
-                stage2Save.toString(),
-                "--js_output_file",
-                compiledFile.toString()));
+    final ImmutableList<String> stage3Flags =
+        createStringList(
+            commonFlags,
+            new String[] {
+              "--restore_stage2_from_file",
+              stage2Save.toString(),
+              "--js_output_file",
+              compiledFile.toString(),
+              "--create_source_map",
+              sourceMapFile.toString()
+            });
+    verifyFlagsAreIncompatibleWithChecksOnly(stage3Flags);
+    runner = new CommandLineRunner(stringListToArray(stage3Flags));
     assertThat(runner.doRun()).isEqualTo(0);
 
     // During stage 3 the message is actually replaced and the output written to the compiled
     // output file.
-    final String compiledJs =
-        new String(java.nio.file.Files.readAllBytes(compiledFile.toPath()), UTF_8);
+    final String compiledJs = java.nio.file.Files.readString(compiledFile.toPath());
     assertThat(compiledJs).isEqualTo("console.log(\"hola\");\n");
+
+    final JsonObject expectedSourceMap = new JsonObject();
+    expectedSourceMap.addProperty("version", 3);
+    expectedSourceMap.addProperty("file", compiledFile.getAbsolutePath());
+    expectedSourceMap.addProperty("lineCount", 1);
+    expectedSourceMap.addProperty("mappings", "AAEAA,OAAQC,CAAAA,GAAR,CADkBC,MAClB;");
+    expectedSourceMap.add("sources", newJsonArrayOfStrings(srcFile.getAbsolutePath()));
+    expectedSourceMap.add(
+        "sourcesContent", newJsonArrayOfStrings(java.nio.file.Files.readString(srcFile.toPath())));
+    expectedSourceMap.add("names", newJsonArrayOfStrings("console", "log", "MSG_HELLO"));
+
+    final String sourceMapText = java.nio.file.Files.readString(sourceMapFile.toPath());
+    JsonObject actualSourceMap = getJsonObjectFromJson(sourceMapText);
+    assertThat(actualSourceMap).isEqualTo(expectedSourceMap);
   }
 
-  private String[] createStringArray(Iterable<String> someStrings, String... additionalStrings) {
-    ImmutableList.Builder<String> builder = ImmutableList.builder();
-    builder.addAll(someStrings);
-    builder.add(additionalStrings);
-    return builder.build().toArray(new String[] {});
+  private static final Gson GSON = new Gson();
+
+  private JsonArray newJsonArrayOfStrings(String... strings) {
+    return GSON.toJsonTree(strings).getAsJsonArray();
+  }
+
+  private JsonObject getJsonObjectFromJson(String json) {
+    return GSON.fromJson(json, JsonObject.class);
+  }
+
+  /** The given flags should be incompatible with `--checks_only`. */
+  private void verifyFlagsAreIncompatibleWithChecksOnly(ImmutableList<String> flags) {
+    final String additionalFlag = "--checks_only";
+    verifyFlagConflictIsReported(flags, additionalFlag);
+  }
+
+  private void verifyFlagConflictIsReported(ImmutableList<String> flags, String additionalFlag) {
+    final ImmutableList<String> combinedFlags =
+        ImmutableList.<String>builder().addAll(flags).add(additionalFlag).build();
+    CommandLineRunner checksOnlyRunner = new CommandLineRunner(stringListToArray(combinedFlags));
+    assertThrows(FlagUsageException.class, checksOnlyRunner::doRun);
+  }
+
+  private String[] stringListToArray(ImmutableList<String> stringList) {
+    return stringList.toArray(new String[] {});
+  }
+
+  private ImmutableList<String> createStringList(
+      Iterable<String> someStrings, String[] additionalStrings) {
+    return (ImmutableList.<String>builder().addAll(someStrings).add(additionalStrings)).build();
   }
 
   private void writeLinesToFile(File file, String... lines) throws IOException {
@@ -272,6 +359,18 @@ public final class CommandLineRunnerTest {
 
   private void writeLinesToFile(File file, Iterable<String> lines) throws IOException {
     java.nio.file.Files.write(file.toPath(), lines, UTF_8);
+  }
+
+  @Test
+  public void testUnknownDiagnosticGroupOnCommandLine() {
+    args.add("--jscomp_error=unknownDiagnosticGroup");
+    exitCodes.clear();
+    compile(new String[] {"alert(1);"});
+
+    // An exit code of -1 indicates that the command line options were bad
+    assertThat(exitCodes).containsExactly(-1);
+    assertThat(errReader.toString(UTF_8))
+        .contains("Unknown diagnostic group: 'unknownDiagnosticGroup'");
   }
 
   @Test
@@ -612,8 +711,21 @@ public final class CommandLineRunnerTest {
   @Test
   public void googFeatureSetYearIsNotDefinedWhenBrowserFeaturesetYearFlagIsNotSupplied() {
     testSame("var x = 3"); // input does not matter
-    assertThat(lastCompiler.options.getDefineReplacements())
+    assertThat(lastCompiler.getOptions().getDefineReplacements())
         .doesNotContainKey("goog.FEATURESET_YEAR");
+  }
+
+  /**
+   * Test that browser_featureset_year flag can not be used in conjunction with --language_out flag.
+   */
+  @Test
+  public void browserFeaturesetYearFlag_usedWithLanguageOutFlag() {
+    args.add("--browser_featureset_year=2019");
+    args.add("--language_out=ECMASCRIPT_2020");
+    FlagUsageException e = assertThrows(FlagUsageException.class, () -> compile("", args));
+    assertThat(e)
+        .hasMessageThat()
+        .contains("ERROR - both flags `--browser_featureset_year` and `--language_out` specified.");
   }
 
   /** Test that browser_featureset_year flag overrides the default goog.FEATURESET_YEAR define */
@@ -626,8 +738,9 @@ public final class CommandLineRunnerTest {
             "goog.FEATURESET_YEAR = goog.define('goog.FEATURESET_YEAR', 2012);");
     String expected = "goog.FEATURESET_YEAR=2019";
     test(original, expected);
-    assertThat(lastCompiler.options.getDefineReplacements()).containsKey("goog.FEATURESET_YEAR");
-    Node n = lastCompiler.options.getDefineReplacements().get("goog.FEATURESET_YEAR");
+    assertThat(lastCompiler.getOptions().getDefineReplacements())
+        .containsKey("goog.FEATURESET_YEAR");
+    Node n = lastCompiler.getOptions().getDefineReplacements().get("goog.FEATURESET_YEAR");
     assertThat(n.getDouble()).isEqualTo(2019.0);
   }
 
@@ -638,21 +751,19 @@ public final class CommandLineRunnerTest {
     FlagUsageException e = assertThrows(FlagUsageException.class, () -> compile("", args));
     assertThat(e)
         .hasMessageThat()
-        .isEqualTo(
-            "Illegal browser_featureset_year=2011. We support values 2012, 2019, 2020, and 2021"
-                + " only");
+        .matches(
+            "Illegal browser_featureset_year=2011. We support values 2012, or 2018..\\d{4} only");
   }
 
-  /** Giving a browser featureset year between 2012 and 2019 reports error */
+  /** Giving a browser featureset year between 2012 and 2018 reports error */
   @Test
   public void invalidBrowserFeaturesetYearFlagGeneratesError2() {
     args.add("--browser_featureset_year=2015");
     FlagUsageException e = assertThrows(FlagUsageException.class, () -> compile("", args));
     assertThat(e)
         .hasMessageThat()
-        .isEqualTo(
-            "Illegal browser_featureset_year=2015. We support values 2012, 2019, 2020, and 2021"
-                + " only");
+        .matches(
+            "Illegal browser_featureset_year=2015. We support values 2012, or 2018..\\d{4} only");
   }
 
   /** Giving a future year as the browser featureset year reports error */
@@ -664,10 +775,10 @@ public final class CommandLineRunnerTest {
     FlagUsageException e = assertThrows(FlagUsageException.class, () -> compile("", args));
     assertThat(e)
         .hasMessageThat()
-        .isEqualTo(
+        .matches(
             "Illegal browser_featureset_year="
                 + higherThanCurrentYear
-                + ". We support values 2012, 2019, 2020, and 2021 only");
+                + ". We support values 2012, or 2018..\\d{4} only");
   }
 
   /** Check that --browser_featureset_year = 2012 correctly sets the language out */
@@ -682,7 +793,7 @@ public final class CommandLineRunnerTest {
     test(original, expected);
     /* Browser's year is not expected to match output language's year
     Flag value --browser_featureset_year=2012 corresponds to output ECMASCRIPT5_STRICT */
-    assertThat(lastCompiler.options.getOutputFeatureSet())
+    assertThat(lastCompiler.getOptions().getOutputFeatureSet())
         .isEqualTo(LanguageMode.ECMASCRIPT5_STRICT.toFeatureSet());
   }
 
@@ -700,6 +811,22 @@ public final class CommandLineRunnerTest {
     Flag value --browser_featureset_year=2019 corresponds to output ECMASCRIPT_2017 */
     assertThat(lastCompiler.getOptions().getOutputFeatureSet())
         .isEqualTo(LanguageMode.ECMASCRIPT_2017.toFeatureSet());
+  }
+
+  /** Check that --browser_featureset_year = 2018 correctly sets the language out */
+  @Test
+  public void browserFeatureSetYearSetsLanguageOut3() {
+    args.add("--browser_featureset_year=2018");
+    String original =
+        lines(
+            "/** @define {number} */", //
+            "goog.FEATURESET_YEAR = goog.define('goog.FEATURESET_YEAR', 2012);");
+    String expected = "goog.FEATURESET_YEAR=2018";
+    test(original, expected);
+    /* Browser's year is not expected to match output language's year
+    Flag value --browser_featureset_year=2018 corresponds to output ECMASCRIPT_2016 */
+    assertThat(lastCompiler.getOptions().getOutputFeatureSet())
+        .isEqualTo(LanguageMode.ECMASCRIPT_2016.toFeatureSet());
   }
 
   @Test
@@ -814,7 +941,7 @@ public final class CommandLineRunnerTest {
             + "}",
         "function f(b) {"
             + " var a;"
-            + " return ((a=b.id) && (a=parseInt(a.substr(1)))) && 0<a;"
+            + " return ((a=b.id) && (a=parseInt(a.substr(1)))) && a>0;"
             + "}");
   }
 
@@ -829,9 +956,8 @@ public final class CommandLineRunnerTest {
   public void testIssue504() {
     args.add("--compilation_level=ADVANCED_OPTIMIZATIONS");
     test(
-        "void function() { alert('hi'); }();",
-        "alert('hi');void 0",
-        CheckSideEffects.USELESS_CODE_ERROR);
+        "void function() { alert('hi'); }();", //
+        "alert('hi');");
   }
 
   @Test
@@ -955,6 +1081,7 @@ public final class CommandLineRunnerTest {
 
   @Test
   public void testHoistedFunction2() {
+    args.add("--language_out=STABLE");
     test("if (window) { f(); function f() {} }", "if (window) { var f = function() {}; f(); }");
   }
 
@@ -1199,34 +1326,6 @@ public final class CommandLineRunnerTest {
   }
 
   @Test
-  public void testForwardDeclareDroppedTypes() {
-    args.add("--dependency_mode=PRUNE_LEGACY");
-
-    args.add("--warning_level=VERBOSE");
-    test(
-        new String[] {
-          lines(
-              "/** @externs */", //
-              new TestExternsBuilder().addClosureExterns().build()),
-          "goog.require('beer');",
-          "goog.provide('beer'); /** @param {Scotch} x */ function f(x) {}",
-          "goog.provide('Scotch'); var x = 3;"
-        },
-        new String[] {"var beer = {}; function f(a) {}", ""});
-
-    test(
-        new String[] {
-          lines(
-              "/** @externs */", //
-              new TestExternsBuilder().addClosureExterns().build()),
-          "goog.require('beer');",
-          "goog.provide('beer'); /** @param {Scotch} x */ function f(x) {}"
-        },
-        new String[] {"var beer = {}; function f(a) {}", ""},
-        RhinoErrorReporter.UNRECOGNIZED_TYPE_ERROR);
-  }
-
-  @Test
   public void testOnlyClosureDependenciesEmptyEntryPoints() throws Exception {
     // Prevents this from trying to load externs.zip
     args.add("--env=CUSTOM");
@@ -1261,6 +1360,40 @@ public final class CommandLineRunnerTest {
   }
 
   @Test
+  public void testOnlyClosureDependenciesOneEntryPoint_pruneAllowNoEntryPoints() {
+    args.add("--dependency_mode=PRUNE_ALLOW_NO_ENTRY_POINTS");
+    args.add("--entry_point=goog:beer");
+    test(
+        new String[] {
+          "goog.require('beer'); var beerRequired = 1;",
+          "goog.provide('beer');\ngoog.require('hops');\nvar beerProvided = 1;",
+          "goog.provide('hops'); var hopsProvided = 1;",
+          "goog.provide('scotch'); var scotchProvided = 1;",
+          "goog.require('scotch');\nvar includeFileWithoutProvides = 1;",
+          "/** This is base.js @provideGoog */ var COMPILED = false;",
+        },
+        new String[] {
+          "var COMPILED = !1;",
+          "var hops = {}, hopsProvided = 1;",
+          "var beer = {}, beerProvided = 1;"
+        });
+  }
+
+  @Test
+  public void testPruneAllowNoEntryPoints_noEntryPointsPrunesEverything() {
+    args.add("--dependency_mode=PRUNE_ALLOW_NO_ENTRY_POINTS");
+    test(
+        new String[] {
+          "goog.require('beer'); var beerRequired = 1;",
+          "goog.provide('beer');\ngoog.require('hops');\nvar beerProvided = 1;",
+          "goog.provide('hops'); var hopsProvided = 1;",
+          "goog.provide('scotch'); var scotchProvided = 1;",
+          "goog.require('scotch');\nvar includeFileWithoutProvides = 1;",
+        },
+        new String[] {});
+  }
+
+  @Test
   public void testSourceMapExpansion1() {
     args.add("--js_output_file");
     args.add("/path/to/out.js");
@@ -1288,7 +1421,7 @@ public final class CommandLineRunnerTest {
     testSame(new String[] {"var x = 3;", "var y = 5;"});
     assertThat(
             lastCommandLineRunner.expandSourceMapPath(
-                lastCompiler.getOptions(), lastCompiler.getModuleGraph().getRootModule()))
+                lastCompiler.getOptions(), lastCompiler.getChunkGraph().getRootChunk()))
         .isEqualTo("foo_m0.js.map");
   }
 
@@ -1573,7 +1706,7 @@ public final class CommandLineRunnerTest {
   public void testSymlink() throws IOException {
     FlagEntry<JsSourceType> jsFile1 = createJsFile("test1", "var a;");
     Path symlink1 = Files.createTempDir().toPath().resolve("symlink1");
-    Path jscompTempDir = Paths.get(jsFile1.getValue()).getParent();
+    Path jscompTempDir = Path.of(jsFile1.getValue()).getParent();
     java.nio.file.Files.createSymbolicLink(symlink1, jscompTempDir);
     compileFiles("var a;", new FlagEntry<>(JsSourceType.JS, symlink1.toString()));
   }
@@ -1586,7 +1719,7 @@ public final class CommandLineRunnerTest {
     args.add("--source_map_input=input2|input2.sourcemap");
     testSame("var x = 3;");
 
-    Map<String, SourceMapInput> inputMaps = lastCompiler.getOptions().inputSourceMaps;
+    ImmutableMap<String, SourceMapInput> inputMaps = lastCompiler.getOptions().inputSourceMaps;
     assertThat(inputMaps).hasSize(2);
     assertThat(inputMaps.get("input1").getOriginalPath()).isEqualTo("input1.sourcemap");
     assertThat(inputMaps.get("input2").getOriginalPath()).isEqualTo("input2.sourcemap");
@@ -1599,9 +1732,10 @@ public final class CommandLineRunnerTest {
     testSame(new String[] {"var x = 3;", "var y = 4;"});
 
     StringBuilder builder = new StringBuilder();
-    JSChunk module = lastCompiler.getModuleGraph().getRootModule();
-    String filename = lastCommandLineRunner.getModuleOutputFileName(module);
-    lastCommandLineRunner.writeModuleOutput(filename, builder, module);
+    ScriptNodeLicensesOnlyTracker licenseTracker = new ScriptNodeLicensesOnlyTracker(lastCompiler);
+    JSChunk chunk = lastCompiler.getChunkGraph().getRootChunk();
+    String filename = lastCommandLineRunner.getChunkOutputFileName(chunk);
+    lastCommandLineRunner.writeModuleOutput(filename, builder, licenseTracker, chunk);
     assertThat(builder.toString()).isEqualTo("var x=3; // m0.js\n");
   }
 
@@ -1612,9 +1746,10 @@ public final class CommandLineRunnerTest {
     testSame(new String[] {"var x = 3;", "var y = 4;"});
 
     StringBuilder builder = new StringBuilder();
-    JSChunk module = lastCompiler.getModuleGraph().getRootModule();
-    String filename = lastCommandLineRunner.getModuleOutputFileName(module);
-    lastCommandLineRunner.writeModuleOutput(filename, builder, module);
+    ScriptNodeLicensesOnlyTracker licenseTracker = new ScriptNodeLicensesOnlyTracker(lastCompiler);
+    JSChunk chunk = lastCompiler.getChunkGraph().getRootChunk();
+    String filename = lastCommandLineRunner.getChunkOutputFileName(chunk);
+    lastCommandLineRunner.writeModuleOutput(filename, builder, licenseTracker, chunk);
     assertThat(builder.toString()).isEqualTo("var x=3;\n//# SourceMappingUrl=m0.js.map\n");
   }
 
@@ -1657,8 +1792,8 @@ public final class CommandLineRunnerTest {
     testSame(new String[] {"var x = 3;", "var y = 5;", "var z = 7;", "var a = 9;"});
 
     StringBuilder builder = new StringBuilder();
-    lastCommandLineRunner.printModuleGraphManifestOrBundleTo(
-        lastCompiler.getModuleGraph(), builder, true);
+    lastCommandLineRunner.printChunkGraphManifestOrBundleTo(
+        lastCompiler.getChunkGraph(), builder, true);
     assertThat(builder.toString())
         .isEqualTo(
             Joiner.on('\n')
@@ -1685,8 +1820,8 @@ public final class CommandLineRunnerTest {
     testSame(new String[] {"var x = 3;", "var y = 5;", "var z = 7;", "var a = 9;"});
 
     StringBuilder builder = new StringBuilder();
-    lastCommandLineRunner.printModuleGraphManifestOrBundleTo(
-        lastCompiler.getModuleGraph(), builder, true);
+    lastCommandLineRunner.printChunkGraphManifestOrBundleTo(
+        lastCompiler.getChunkGraph(), builder, true);
     assertThat(builder.toString())
         .isEqualTo(
             Joiner.on('\n')
@@ -1708,12 +1843,12 @@ public final class CommandLineRunnerTest {
   }
 
   @Test
-  public void testOutputModuleGraphJson() throws Exception {
+  public void testOutputChunkGraphJson() throws Exception {
     useModules = ModulePattern.STAR;
     testSame(new String[] {"var x = 3;", "var y = 5;", "var z = 7;", "var a = 9;"});
 
     StringBuilder builder = new StringBuilder();
-    lastCommandLineRunner.printModuleGraphJsonTo(builder);
+    lastCommandLineRunner.printChunkGraphJsonTo(builder);
     assertThat(builder.toString()).contains("transitive-dependencies");
   }
 
@@ -1863,7 +1998,9 @@ public final class CommandLineRunnerTest {
   }
 
   @Test
-  public void testES6TranspiledByDefault() {
+  public void testES6NotTranspiledByDefault() {
+    testSame("var x = class {};");
+    args.add("--language_out=STABLE");
     test("var x = class {};", "var x = function() {};");
   }
 
@@ -1890,7 +2027,8 @@ public final class CommandLineRunnerTest {
   @Test
   public void testES5Strict() {
     args.add("--language_in=ECMASCRIPT5_STRICT");
-    args.add("--language_out=ECMASCRIPT5_STRICT");
+    args.add("--language_out=ECMASCRIPT5");
+    args.add("--emit_use_strict=true");
     test("var x = f.function", "'use strict';var x = f.function");
     test("var let", RhinoErrorReporter.PARSE_ERROR);
     test("function f(x) { delete x; }", StrictModeCheck.DELETE_VARIABLE);
@@ -1899,7 +2037,8 @@ public final class CommandLineRunnerTest {
   @Test
   public void testES5StrictUseStrict() {
     args.add("--language_in=ECMASCRIPT5_STRICT");
-    args.add("--language_out=ECMASCRIPT5_STRICT");
+    args.add("--language_out=ECMASCRIPT5");
+    args.add("--emit_use_strict=true");
     Compiler compiler = compile(new String[] {"var x = f.function"});
     String outputSource = compiler.toSource();
     assertThat(outputSource).startsWith("'use strict'");
@@ -1908,7 +2047,8 @@ public final class CommandLineRunnerTest {
   @Test
   public void testES5StrictUseStrictMultipleInputs() {
     args.add("--language_in=ECMASCRIPT5_STRICT");
-    args.add("--language_out=ECMASCRIPT5_STRICT");
+    args.add("--language_out=ECMASCRIPT5");
+    args.add("--emit_use_strict=true");
     Compiler compiler =
         compile(new String[] {"var x = f.function", "var y = f.function", "var z = f.function"});
     String outputSource = compiler.toSource();
@@ -1955,7 +2095,7 @@ public final class CommandLineRunnerTest {
     setFilename(0, "foo/bar.js");
     String expected = "var module$foo$bar={default:{}};module$foo$bar.default.test=1;";
     test("exports.test = 1", expected);
-    assertThat(outReader.toString()).isEqualTo(expected + "\n");
+    assertThat(outReader.toString(UTF_8)).isEqualTo(expected + "\n");
   }
 
   @Test
@@ -1966,7 +2106,7 @@ public final class CommandLineRunnerTest {
     setFilename(0, "foo/bar.js");
     test("exports.test = 1", "var module$foo$bar={default: {}}; module$foo$bar.default.test = 1;");
     // With modules=auto no direct output is created.
-    assertThat(outReader.toString()).isEmpty();
+    assertThat(outReader.toString(UTF_8)).isEmpty();
   }
 
   @Test
@@ -2113,6 +2253,7 @@ public final class CommandLineRunnerTest {
     args.add("--entry_point=app");
     args.add("--dependency_mode=PRUNE");
     args.add("--language_in=ECMASCRIPT6");
+    args.add("--language_out=ECMASCRIPT5");
     args.add("--module_resolution=NODE");
     setFilename(0, "foo.js");
     setFilename(1, "app.js");
@@ -2640,7 +2781,8 @@ public final class CommandLineRunnerTest {
     test(
         "function foo(){ const answerToAll = 42; }",
         lines(
-            "self.window||(self.window=self,self.window.top=self);var __jscov=window.top.__jscov||",
+            "(function(a){a.window||(a.window=a,a.window.top=a)})(typeof"
+                + " self!==\"undefined\"?self:globalThis);var __jscov=window.top.__jscov||",
             "(window.top.__jscov={fileNames:[],instrumentedLines:[],executedLines:[]}),",
             "JSCompiler_lcov_data_input0=[];",
             "__jscov.executedLines.push(JSCompiler_lcov_data_input0);",
@@ -2656,7 +2798,8 @@ public final class CommandLineRunnerTest {
     test(
         "function foo(){ const answerToAll = 42; }",
         lines(
-            "self.window||(self.window=self,self.window.top=self);",
+            "(function(a){a.window||(a.window=a,a.window.top=a)})(typeof"
+                + " self!==\"undefined\"?self:globalThis);",
             "var __jscov=window.top.__jscov||(window.top.__jscov= ",
             "{fileNames:[],branchPresent:[],branchesInLine:[],branchesTaken:[]}); ",
             "function foo(){}"));
@@ -2697,6 +2840,55 @@ public final class CommandLineRunnerTest {
         .isEqualTo(
             "Expected --production_instrumentation_array_name to be set when "
                 + "--instrument_for_coverage_option is set to Production");
+  }
+
+  @Test
+  public void testBundleOutput_bundlesGoogModule() throws IOException {
+    // Create a path for the final output
+    File bundledFile = temporaryFolder.newFile("bundle.js");
+
+    FlagEntry<JsSourceType> jsFile1 = createJsFile("test1", "var a;");
+    FlagEntry<JsSourceType> jsFile2 = createJsFile("test2", "goog.module('foo'); var b;");
+
+    args.add("--compilation_level=BUNDLE");
+    args.add("--dependency_mode=NONE");
+    args.add("--js_output_file");
+    args.add(bundledFile.getPath());
+
+    compileJsFiles("", jsFile1, jsFile2);
+
+    String bundledJs = java.nio.file.Files.readString(bundledFile.toPath());
+    String expected =
+        lines(
+            "//" + jsFile1.getValue(),
+            "var a;",
+            "//" + jsFile2.getValue(),
+            "goog.loadModule(function(exports) {'use strict';goog.module('foo'); var b;",
+            ";return exports;});",
+            "\n");
+    assertThat(bundledJs).isEqualTo(expected);
+  }
+
+  @Test
+  public void testBundleOutput_ignoresSyntaxErrors() throws IOException {
+    // Verify that if bundling, the compiler doesn't run a full parse and thus doesn't report
+    // syntax errors.
+
+    // Create a path for the final output
+    File bundledFile = temporaryFolder.newFile("bundle.js");
+
+    FlagEntry<JsSourceType> jsFile = createJsFile("test1", "var a; syntax error!");
+
+    args.add("--compilation_level=BUNDLE");
+    args.add("--dependency_mode=NONE");
+    args.add("--js_output_file");
+    args.add(bundledFile.getPath());
+
+    compileJsFiles("", jsFile);
+
+    String bundledJs = java.nio.file.Files.readString(bundledFile.toPath());
+    String expected = lines("//" + jsFile.getValue(), "var a; syntax error!\n");
+    assertThat(bundledJs).isEqualTo(expected);
   }
 
   @Rule public TemporaryFolder folder = new TemporaryFolder();
@@ -2766,31 +2958,55 @@ public final class CommandLineRunnerTest {
         "let Foo; const x = `${Foo}`;",
         lines(
             "var $jscomp=$jscomp||{};$jscomp.scope={};",
-            "$jscomp.createTemplateTagFirstArg=function(a){return a.raw=a;};",
-            "$jscomp.createTemplateTagFirstArgWithRaw=function(a,b){a.raw=b;return a};",
+            "$jscomp.createTemplateTagFirstArg=function(a){",
+            "  return $jscomp.createTemplateTagFirstArgWithRaw(a,a)",
+            "};",
+            "$jscomp.createTemplateTagFirstArgWithRaw=function(a,b){",
+            "  a.raw=b;",
+            "  Object.freeze && (Object.freeze(a), Object.freeze(b));",
+            "  return a",
+            "}",
             "var Foo,x=\"\"+Foo"));
 
     test(
         "const x = `\\${Foo}`;",
         lines(
             "var $jscomp=$jscomp||{};$jscomp.scope={};",
-            "$jscomp.createTemplateTagFirstArg=function(a){return a.raw=a;};",
-            "$jscomp.createTemplateTagFirstArgWithRaw=function(a,b){a.raw=b;return a};",
+            "$jscomp.createTemplateTagFirstArg=function(a){",
+            "  return $jscomp.createTemplateTagFirstArgWithRaw(a,a)",
+            "};",
+            "$jscomp.createTemplateTagFirstArgWithRaw=function(a,b){",
+            "  a.raw=b;",
+            "  Object.freeze && (Object.freeze(a), Object.freeze(b));",
+            "  return a",
+            "}",
             "var x=\"${Foo}\""));
 
     test(
         "let Foo; const x = `${Foo}\\${Foo}`;",
         lines(
             "var $jscomp=$jscomp||{};$jscomp.scope={};",
-            "$jscomp.createTemplateTagFirstArg=function(a){return a.raw=a;};",
-            "$jscomp.createTemplateTagFirstArgWithRaw=function(a,b){a.raw=b;return a};",
+            "$jscomp.createTemplateTagFirstArg=function(a){",
+            "  return $jscomp.createTemplateTagFirstArgWithRaw(a,a)",
+            "};",
+            "$jscomp.createTemplateTagFirstArgWithRaw=function(a,b){",
+            "  a.raw=b;",
+            "  Object.freeze && (Object.freeze(a), Object.freeze(b));",
+            "  return a",
+            "}",
             "var Foo,x=Foo+\"${Foo}\""));
     test(
         "let Foo; const x = `\\${Foo}${Foo}`;",
         lines(
             "var $jscomp=$jscomp||{};$jscomp.scope={};",
-            "$jscomp.createTemplateTagFirstArg=function(a){return a.raw=a;};",
-            "$jscomp.createTemplateTagFirstArgWithRaw=function(a,b){a.raw=b;return a};",
+            "$jscomp.createTemplateTagFirstArg=function(a){",
+            "  return $jscomp.createTemplateTagFirstArgWithRaw(a,a)",
+            "};",
+            "$jscomp.createTemplateTagFirstArgWithRaw=function(a,b){",
+            "  a.raw=b;",
+            "  Object.freeze && (Object.freeze(a), Object.freeze(b));",
+            "  return a",
+            "}",
             "var Foo,x=\"${Foo}\"+Foo"));
   }
 
@@ -2855,6 +3071,7 @@ public final class CommandLineRunnerTest {
   @Test
   public void testOptionalCatch() {
     args.add("--language_in=ECMASCRIPT_2019");
+    args.add("--language_out=ECMASCRIPT_2018");
     test("try { x(); } catch {}", "try{x()}catch(a){}");
   }
 
@@ -2873,7 +3090,7 @@ public final class CommandLineRunnerTest {
 
     File outputFile1 = new File(outDir, "a.js");
     File outputFile2 = new File(outDir, "b.js");
-    File weakFile = new File(outDir, JSChunk.WEAK_MODULE_NAME + ".js");
+    File weakFile = new File(outDir, JSChunk.WEAK_CHUNK_NAME + ".js");
 
     args.add("--chunk_output_path_prefix");
     args.add(outDir + "/");
@@ -2899,6 +3116,104 @@ public final class CommandLineRunnerTest {
     assertThat(Files.asCharSource(outputFile1, UTF_8).read()).isEqualTo(inputSource1);
     assertThat(Files.asCharSource(outputFile2, UTF_8).read()).isEqualTo(inputSource2);
     assertThat(weakFile.exists()).isFalse();
+  }
+
+  @Test
+  public void testAssumeStaticInheritanceIsNotUsed() {
+    testSame("");
+    assertThat(lastCompiler.getOptions().getAssumeStaticInheritanceIsNotUsed()).isTrue();
+    args.add("--assume_static_inheritance_is_not_used=false");
+    testSame("");
+    assertThat(lastCompiler.getOptions().getAssumeStaticInheritanceIsNotUsed()).isFalse();
+  }
+
+  @Test
+  public void testRewriteAndIsolatePolyfills() {
+    testSame("");
+
+    assertThat(lastCompiler.getOptions().getRewritePolyfills()).isTrue();
+    assertThat(lastCompiler.getOptions().getIsolatePolyfills()).isFalse();
+
+    args.add("--isolate_polyfills=true");
+    testSame("");
+
+    assertThat(lastCompiler.getOptions().getRewritePolyfills()).isTrue();
+    assertThat(lastCompiler.getOptions().getIsolatePolyfills()).isTrue();
+  }
+
+  @Test
+  public void testCrossChunkCodeMotionNoStubMethods() {
+    testSame("");
+    assertThat(lastCompiler.getOptions().crossChunkCodeMotionNoStubMethods).isFalse();
+    args.add("--assume_no_prototype_method_enumeration=true");
+    testSame("");
+    assertThat(lastCompiler.getOptions().crossChunkCodeMotionNoStubMethods).isTrue();
+  }
+
+  @Test
+  public void testParamModification1() {
+    args.add("--compilation_level=ADVANCED");
+    test(
+        "function substr (value, begin, end) {"
+            + "  return value.slice(begin, end)"
+            + "}"
+            + "window.bug = function (s, i) {"
+            + "  return substr(s, i, i = 5);"
+            + "}",
+        "window.a=function(b,c){return b.slice(c,5);};");
+  }
+
+  @Test
+  public void testParamModification2() {
+    args.add("--compilation_level=ADVANCED");
+    test(
+        "function substr (value, begin, end) {"
+            + "  return value.slice(begin, end)"
+            + "}"
+            + "window.bug = function (s, i) {"
+            + "  return substr(s, i, (s='',i=5));"
+            + "}",
+        "window.a=function(b,c){return b.slice(c,5)}");
+  }
+
+  @Test
+  public void testParamModification3() {
+    args.add("--compilation_level=SIMPLE");
+    test(
+        "function substr (value, begin, end) {"
+            + "  return value.slice(begin, end)"
+            + "}"
+            + "window.bug = function (s, i) {"
+            + "  return substr(s, i, (s='',i=5));"
+            + "}",
+        "function substr(a,b,c){return a.slice(b,c)} window.bug=function(a,b){return"
+            + " substr(a,b,5)}");
+  }
+
+  @Test
+  public void testParamModification4() {
+    args.add("--compilation_level=ADVANCED");
+    test(
+        "function substr (value, begin, end, a, b, c) {"
+            + "  return value.slice(begin, end, a, b, c)"
+            + "}"
+            + "window.bug = function (s, i) {"
+            + "  return substr(s, i, i=5, i, i=7, i);"
+            + "}",
+        "window.a=function(c,b){var d=b,e=b=5,f=b,g=b=7;return c.slice(d,e,f,g,b)}");
+  }
+
+  @Test
+  public void testParamModification5() {
+    args.add("--compilation_level=ADVANCED");
+    test(
+        "function substr (value, begin, end) {"
+            + "  return value.slice(begin, end)"
+            + "}"
+            + "window.bug = function (a, b, c) {"
+            + "  return substr(a, b+1, b=c);"
+            + "}",
+        "window.a=function(b,c,d){return b.slice(c+1,d)}");
   }
 
   /* Helper functions */
@@ -2928,7 +3243,7 @@ public final class CommandLineRunnerTest {
    * into {@code compiled}. If {@code warning} is non-null, we will also check if the given warning
    * type was emitted.
    */
-  private void test(String[] original, String[] compiled, DiagnosticType warning) {
+  private void test(String[] original, String[] compiled, @Nullable DiagnosticType warning) {
     exitCodes.clear();
     Compiler compiler = compile(original);
 
@@ -2991,11 +3306,15 @@ public final class CommandLineRunnerTest {
     if (!compiler.getErrors().isEmpty()) {
       assertThat(compiler.getErrors()).hasSize(1);
       assertThat(compiler.getErrors().get(0).getType()).isEqualTo(warning);
-      assertThat(lastExitCode).isEqualTo(1);
+      assertWithMessage("Expected exit code of 1.  " + "Contents of err printstream:\n" + errReader)
+          .that(lastExitCode)
+          .isEqualTo(1);
     } else {
       assertThat(compiler.getWarnings()).hasSize(1);
       assertThat(compiler.getWarnings().get(0).getType()).isEqualTo(warning);
-      assertThat(lastExitCode).isEqualTo(0);
+      assertWithMessage("Expected exit code of 0.  " + "Contents of err printstream:\n" + errReader)
+          .that(lastExitCode)
+          .isEqualTo(0);
     }
   }
 
@@ -3083,7 +3402,7 @@ public final class CommandLineRunnerTest {
     compileArgs(expectedOutput, null);
   }
 
-  private void compileArgs(String expectedOutput, DiagnosticType expectedError) {
+  private void compileArgs(String expectedOutput, @Nullable DiagnosticType expectedError) {
     String[] argStrings = args.toArray(new String[] {});
 
     CommandLineRunner runner =
@@ -3105,6 +3424,7 @@ public final class CommandLineRunnerTest {
       assertThat(compiler.getErrors()).hasSize(1);
       assertError(compiler.getErrors().get(0)).hasType(expectedError);
     }
+    lastCommandLineRunner = runner;
   }
 
   private String compile(String inputString, List<String> args) {
@@ -3136,22 +3456,24 @@ public final class CommandLineRunnerTest {
     Supplier<List<SourceFile>> inputsSupplier = null;
     Supplier<List<JSChunk>> modulesSupplier = null;
 
-    if (useModules == ModulePattern.NONE) {
-      List<SourceFile> inputs = new ArrayList<>();
-      for (int i = 0; i < original.length; i++) {
-        inputs.add(SourceFile.fromCode(getFilename(i), original[i]));
-      }
-      inputsSupplier = Suppliers.ofInstance(inputs);
-    } else if (useModules == ModulePattern.STAR) {
-      modulesSupplier =
-          Suppliers.<List<JSChunk>>ofInstance(
-              ImmutableList.copyOf(JSChunkGraphBuilder.forStar().addChunks(original).build()));
-    } else if (useModules == ModulePattern.CHAIN) {
-      modulesSupplier =
-          Suppliers.<List<JSChunk>>ofInstance(
-              ImmutableList.copyOf(JSChunkGraphBuilder.forChain().addChunks(original).build()));
-    } else {
-      throw new IllegalArgumentException("Unknown module type: " + useModules);
+    switch (useModules) {
+      case NONE:
+        List<SourceFile> inputs = new ArrayList<>();
+        for (int i = 0; i < original.length; i++) {
+          inputs.add(SourceFile.fromCode(getFilename(i), original[i]));
+        }
+        inputsSupplier = Suppliers.ofInstance(inputs);
+        break;
+      case STAR:
+        modulesSupplier =
+            Suppliers.<List<JSChunk>>ofInstance(
+                ImmutableList.copyOf(JSChunkGraphBuilder.forStar().addChunks(original).build()));
+        break;
+      case CHAIN:
+        modulesSupplier =
+            Suppliers.<List<JSChunk>>ofInstance(
+                ImmutableList.copyOf(JSChunkGraphBuilder.forChain().addChunks(original).build()));
+        break;
     }
 
     runner.enableTestMode(
@@ -3195,5 +3517,9 @@ public final class CommandLineRunnerTest {
     String name = filenames.get(i);
     checkState(name != null && !name.isEmpty());
     return name;
+  }
+
+  private String concatStrings(String... strings) {
+    return String.join("", strings);
   }
 }
